Fix width of overflow container

--- a/packages/core/components/FileDetails/FileDetails.module.css
+++ b/packages/core/components/FileDetails/FileDetails.module.css
@@ -53,7 +53,6 @@
     content: " ";
     height: 50px;
     right: 0;
-    max-width: var(--file-details-width);
     position: absolute;
     width: 100%;
     z-index: 11;
